src/test/deca/syntax/invalid/homemade/parser/test/test_pars_inv_instruction_primary_readint_oubli_parenthese.deca
// Description:
//    tests de programme incorrect syntaxiquement pour une primary
//
// Resultats:
//    Ligne 13 : Erreur (oubli parenthese)
//    
//
// Historique:
//    cree le 04/01/2023

{
    readInt;
}
